kt学习，以及gradle build 版本优化

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,10 @@ android {
                     ".apk"
         }
     }
+//
+//    dataBinding {
+//        enabled = true
+//    }
 }
 
 static def releaseTime() {
