--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,10 @@ android {
                     ".apk"
         }
     }
+
+    dataBinding {
+        enabled true
+    }
 }
 
 static def releaseTime() {
@@ -98,5 +102,7 @@ dependencies {
     //文字滚动
     implementation 'com.youth.banner:banner:1.4.10'
 
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.4'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.4'
 
 }
