--- a/base/build.gradle
+++ b/base/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     api 'com.trello.rxlifecycle2:rxlifecycle:2.2.1'
     api 'com.trello.rxlifecycle2:rxlifecycle-android:2.2.1'
     api 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.1'
+//    api 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+
     api rootProject.ext.dependencies["rxjava"]
     api rootProject.ext.dependencies["rxandroid"]
     api project(':library_net')
