--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ android {
         versionName rootProject.ext.android["versionName"]
         ndk {
 
-            abiFilters "armeabi-v7a", "arm64-v8a"
+            abiFilters "armeabi-v7a", "arm64-v8a","x86_64","x86"
         }
         multiDexEnabled true
 
@@ -74,6 +74,7 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation project(':base')
     implementation project(':ypatchcore')
+    implementation project(':sign')
 
 
     def room_version = "2.3.0-alpha01"
